--- a/F4/Exempel 1/slutkod/index.html
+++ b/F4/Exempel 1/slutkod/index.html
@@ -7,18 +7,17 @@
   </head>
   <body>
     <script type="text/javascript">
+
       'use strict';
 
       function sayHello() {
         var visitor, greeting;
-        visitor = prompt("Vad heter du?");
-        greeting = 'Hello ' + visitor + "!";
+        visitor = prompt('Vad heter du?');
+        greeting = 'Hello ' + visitor;
         document.write(greeting);
       }
 
       sayHello();
-
-
 
     </script>
   </body>
