--- a/F4/Exempel 2/slutkod/index.html
+++ b/F4/Exempel 2/slutkod/index.html
@@ -6,17 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <script>
-    
-      'use strict';
-      let i = 0;
+    <script type="text/javascript">
 
-      for(i=1; i<7;i++) {
+      'use strict';
+
+      var i = 0;
+
+      for (i = 1; i <= 6; i++) {
         document.write('<h' + i + '>');
         document.write('Rubrik ' + i);
-        document.write('</h' + i + ">");
+        document.write('</h' + i + '>');
       }
-
+	  
+	  /*
+	 Exempel räckvidd block(let) vs scope(let)
+	 for(let / var i=0;i<10 ;i++ ){
+		let x = i*2;
+		var x = * 2
+	 }
+		  
+	console.log(i);
+	console.log(x);
+	  
+	  
+	  
+	  */
 
     </script>
   </body>
